@@ -1,9 +1,12 @@
 -Time to create backups has decreased, in some situations even by a factor 
  of 2 or more, speeding up syncing and program exit.
+-Also sync relevant settings (e.g. fonts, colours, ...) during the initial
+ sync.
 -The functionality of mnemosyne-webserver has now been merged into the main
  program.
--Added command line options --sync-server --web-server which starts the sync
- and the web server in headless mode (useful to run e.g. on a NAS server).
+-Added command line options --sync-server and --web-server which starts the 
+ sync and the web server in headless mode (i.e. without a GUI) (useful to run 
+ e.g. on a NAS server).
 -Added new statistic: number of new cards learned per day.
 -When editing a card through the browser, make sure the correct set of tags is
  displayed if sister cards have different tags (requested by Scott Youngman).
